Fixed view issues on smaller laptop screens (Main Page))

--- a/frontend/src/Styles/FrontPage.css
+++ b/frontend/src/Styles/FrontPage.css
@@ -14,10 +14,9 @@
 #TitleBorder{
     background-color: darkgoldenrod;
     width: 100%;
-    min-height: 80px;
+    min-height: 10vh;
+    display:flex;
     
-    display: flex;
-    flex-direction: row;
     margin-bottom: 2%;
 
     border-width: 3px;
@@ -27,8 +26,9 @@
 }
 
 #title{
-    height: 80px;
+    height: 70px;
     margin-left: 15px;
+    display: inline;
 }
 
 #loginDiv{
@@ -217,7 +217,7 @@ border-color:black;
 
 .headerBtn
 {
-    display: flex;
+    display: inline;
     font-family: 'Rockwell', 'Arial Narrow', Arial, sans-serif;
     font-weight: bold;
     font-size: 14pt;
@@ -230,32 +230,13 @@ border-color:black;
     border-bottom: 0px;
     border-left: 5px solid rgb(167, 122, 9);
     cursor: pointer;
-    position: absolute;
-}
-#main{
-    margin-left: 50%;
-}
-
-#notifs
-{
-    margin-left: 60%;
-    visibility: 'hidden';
-}
-
-#account
-{
-    margin-left: 70%;
-}
-
-#about
-{
-    margin-left: 80%;
 }
 
 #logout
 {
-    margin-left: 90%;
+    border-right:  5px solid rgb(167, 122, 9);
 }
+
 .headerBtn:active
 {
     background-color: rgb(167, 122, 9);
